--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <div class="col s6 m4">
             <div class="card amber darken-2">
                 <div class="card-content white-text">
-                    <span class="card-title">Mikasa Ackerman</span>
-                    <p>Attack on Titans</p>
+                    <span class="card-title">Lelouch vi Britannia</span>
+                    <p>Code Geass</p>
                 </div>
             </div>
         </div>
