--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <div class="col s6 m4">
             <div class="card deep-orange">
                 <div class="card-content white-text">
-                    <span class="card-title">Mitsuha Miyamizu</span>
-                    <p>Kimi no Na Wa</p>
+                    <span class="card-title">Ingwar Wirjawan</span>
+                    <p>Medan</p>
                 </div>
             </div>
         </div>
