--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <div class="col s6 m4">
             <div class="card black">
                 <div class="card-content white-text">
-                    <span class="card-title">Shino Asada</span>
-                    <p>Sword Art Online</p>
+                    <span class="card-title">Bima Handika Pratama</span>
+                    <p>Jakarta</p>
                 </div>
             </div>
         </div>
