--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="col s6 m4">
             <div class="card deep-orange">
                 <div class="card-content white-text">
-                    <span class="card-title">Mitsuha Miyamizu</span>
+                    <span class="card-title">Steven</span>
                     <p>Kimi no Na Wa</p>
                 </div>
             </div>
